--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ packages = [{include = "nornir_infrahub"}]
 
 [tool.poetry.dependencies]
 python = "^3.8, <3.12"
+infrahub = { git = "ssh://git@github.com/opsmill/infrahub.git", tag="0.5.0" }
 
 
 [build-system]
