--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,28 +32,13 @@ python-slugify = "^8.0.1"
 
 
 [tool.poetry.group.dev.dependencies]
-pytest = "^7.4.3"
+pytest = "*"
 ruff = "^0.1"
-mypy = "^1.6.1"
-pytest-asyncio = "^0.21.1"
+mypy = "^1.6"
+pytest-asyncio = "*"
 types-python-slugify = "*"
 invoke = "^2.2.0"
-
-[tool.black]
-line-length = 120
-include = '\.pyi?$'
-exclude = '''
-        /(
-          \.git
-        | \.tox
-        | \.venv
-        | env/
-        | _build
-        | build
-        | dist
-        | examples
-        )/
-    '''
+yamllint = "^1.32.0"
 
 [tool.coverage.run]
 branch = true
@@ -64,53 +49,13 @@ exclude_lines = [
     "raise NotImplementedError()"
 ]
 
-[tool.pylint.format]
-disable = "logging-fstring-interpolation"
-
-[tool.pylint.basic]
-# No docstrings required for private methods (Pylint default), or for test_ functions.
-no-docstring-rgx="^(_|test_)"
-
-[tool.pylint.messages_control]
-# Line length is enforced by Black, so pylint doesn't need to check it.
-# Pylint and Black disagree about how to format multi-line arrays; Black wins.
-disable = """,
-    line-too-long,
-    missing-module-docstring,
-    missing-function-docstring,
-    missing-class-docstring,
-    consider-using-from-import,
-    invalid-name,
-    too-many-arguments,
-    too-many-locals,
-    keyword-arg-before-vararg,
-    too-few-public-methods,
-    too-many-instance-attributes,
-    fixme,
-    consider-using-f-string,
-    protected-access,
-    import-self,
-    wrong-import-order,
-    """
-
-[tool.pylint.miscellaneous]
-notes = """,
-    FIXME,
-    XXX,
-    """
-
-[tool.pylint.similarities]
-min-similarity-lines = 20
-
 [tool.pytest.ini_options]
 asyncio_mode = "auto"
 testpaths = [
     "tests"
 ]
 filterwarnings = [
-    "ignore:Module already imported so cannot be rewritten",
-    "ignore:the imp module is deprecated",
-    "ignore:Deprecated call to",
+    "ignore:pkg_resources is deprecated",
 ]
 addopts = "-vs"
 
@@ -122,22 +67,28 @@ ignore_missing_imports = true
 [tool.ruff]
 
 select = [
-    "C90",  # mccabe
-    "DTZ",  # flake8-datetimez
-    "E",    # pycodestyle
-    "F",    # Pyflakes
-    "ICN",  # flake8-import-conventions
-    "TCH",  # flake8-type-checking
-    "T10",  # flake8-debugger
-    "Q",    # flake8-quotes
-    "W",    # pycodestyle
-    "YTT",  # flake8-2020
+    "C90",      # mccabe
+    "ASYNC",    # flake8-async
+    "DTZ",      # flake8-datetimez
+    "E",        # style errors
+    "F",        # flakes
+    "I",        # isort
+    "ICN",      # flake8-import-conventions
+    "TCH",      # flake8-type-checking
+    "T10",      # flake8-debugger
+    "PL",       # pylint
+    "Q",        # flake8-quotes
+    "W",        # pycodestyle
+    "YTT",      # flake8-2020
 ]
 
 line-length = 120
 
 [tool.ruff.mccabe]
-max-complexity = 10
+max-complexity = 15
+
+[tool.ruff.isort]
+known-third-party = ["nornir_infrahub"]
 
 [tool.ruff.per-file-ignores]
 
