--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,7 @@ jobs:
     if: |
       always() && !cancelled() &&
       !contains(needs.*.result, 'failure') &&
-      !contains(needs.*.result, 'cancelled') &&
+      !contains(needs.*.result, 'cancelled')
     needs: ["lint"]
     runs-on: "ubuntu-latest"
     timeout-minutes: 30
