--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,7 @@ jobs:
         run: |
           pipx install poetry
           pip install invoke toml
+          poetry config virtualenvs.create false
       - name: "Install Linters"
         run: "poetry install --only=dev"
       - name: "Linting"
@@ -51,6 +52,7 @@ jobs:
         run: |
           pipx install poetry
           pip install invoke toml
+          poetry config virtualenvs.create false
       - name: "Install Nornir Infrahub"
         run: "poetry install"
       - name: "Pytest Tests"
