--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,7 @@ classifiers = [
 
 [tool.poetry.dependencies]
 python = "^3.8, <3.12"
-infrahub-sdk = "^0,>=0.2"
+infrahub-sdk = {version = "^0,>=0.9.1", extras = ["tests"]}
 ruamel-yaml = "^0.18.5"
 nornir = "^3.4.1"
 nornir-utils = "^0.2.0"
