--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,12 +4,10 @@ version = "0.3.0"
 description = "Nornir plugin for Infrahub"
 authors = ["OpsMill <info@opsmill.com>"]
 readme = "README.md"
-packages = [{include = "nornir_infrahub"}]
 license = "Apache-2.0"
 homepage = "https://opsmill.com"
 repository = "https://github.com/opsmill/nornir-infrahub"
 documentation = "https://docs.infrahub.app/"
-
 classifiers = [
     "Intended Audience :: Developers",
     "Programming Language :: Python :: 3",
@@ -17,6 +15,10 @@ classifiers = [
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
+]
+
+packages = [
+    { include = "nornir_infrahub" }
 ]
 
 [tool.poetry.plugins."nornir.plugins.inventory"]
